--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "serve": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "devDependencies": {
     "ts-loader": "^5.4.5",
@@ -14,6 +15,7 @@
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "tslint": "^5.18.0"
   }
 }
