--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "tslint 'src/**/*.ts'"
+    "lint": "tslint 'src/**/*.ts'",
+    "lint-fix": "tslint --fix 'src/**/*.ts'"
   },
   "devDependencies": {
     "ts-loader": "^5.4.5",
