--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "es6",
-    "target": "es2017"
+    "target": "es2017",
+    "allowSyntheticDefaultImports": true
   }
 }
