--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/mithril": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.4.5",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3",
