--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bobby",
   "version": "0.0.0",
   "description": "Bobby",
-  "author": "Yannick Armand",
+  "author": "Yannick A.",
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "serve": "webpack-dev-server --config webpack.dev.js",
