Typage de toutes les fonctions

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "serve": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint src/**/*.ts",
-    "lint-fix": "eslint --fix src/**/*.ts"
+    "lint": "eslint 'src/**/*.ts'",
+    "lint-fix": "eslint --fix 'src/**/*.ts'"
   },
   "dependencies": {
     "mithril": "^2.0.4"
