--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,12 +3,34 @@ image: node:12
 variables:
   APP_ENV: production
 
-pages:
-  script:
+stages:
+  - build
+  - deploy
+
+build:
+  stage: build
+  before_script:
     - npm install
+  script:
     - npm run build
   artifacts:
     paths:
       - public
-  only:
-    - master
+
+deploy_production:
+  stage: deploy
+  environment:
+    name: production
+    url: https://bobby.yannicka.fr
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  before_script:
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+    - apt-get update -y && apt-get install rsync -y
+    - mkdir -p ~/.ssh
+    - eval $(ssh-agent -s)
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
+    - echo "$PRODUCTION_PRIVATE_KEY" > ~/.ssh/id_rsa
+  script:
+    - rsync -avz --delete /builds/yannicka/test-ci/dist/ -e "ssh -i ~/.ssh/id_tmp" $PRODUCTION_SERVER
