--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,17 @@
 stages:
   - build
-  - deploy
-
-variables:
-  TAG_LATEST: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
-  TAG_COMMIT: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
 
 build:
-  image: docker:latest
+  image: node:latest
   stage: build
-  services:
-    - docker:dind
   script:
-    - docker build -t $TAG_COMMIT -t $TAG_LATEST -f docker/Dockerfile .
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - docker push $TAG_COMMIT
-    - docker push $TAG_LATEST
-
-deploy:
-  image: alpine:latest
-  stage: deploy
-  script:
-    - chmod og= $SSH_PRIVATE_KEY
-    - apk update && apk add openssh-client
-    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY"
-    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "docker pull $TAG_COMMIT"
-    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "docker container rm -f bobby || true"
-    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "docker run -d -p 9001:80 --name bobby $TAG_COMMIT"
-  environment:
-    name: production
-    url: http://bobby.yannicka.fr/
-  only:
-    - master
+    - cd bobby
+    - npm install
+    - npm run build
+    - npm run lint
+    - mv public bobby
+    - apt update -y && apt install -y zip
+    - zip bobby.zip -r bobby
+  artifacts:
+    paths:
+      - bobby/bobby.zip
