CI: Do not generate a zip in a zip.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,6 @@ build:
     - npm run build
     - npm run lint
     - mv public bobby
-    - apt update -y && apt install -y zip
-    - zip bobby.zip -r bobby
   artifacts:
     paths:
-      - bobby.zip
+      - bobby
