--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - release
 
 build:
   image: node:latest
@@ -12,3 +13,20 @@ build:
   artifacts:
     paths:
       - bobby
+
+release_job:
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  stage: release
+  rules:
+    - if: $CI_COMMIT_TAG
+  script:
+    - echo "Creating release $CI_COMMIT_TAG"
+  release:
+    name: 'Release $CI_COMMIT_TAG'
+    description: '$CI_COMMIT_TAG'
+    tag_name: $CI_COMMIT_TAG
+    assets:
+      links:
+        - name: 'Bobby'
+          url: '$CI_REPOSITORY_URL/-/jobs/artifacts/$CI_COMMIT_TAG/download?job=build'
+          link_type: package
