--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mithril": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@vitest/coverage-c8": "^0.31.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.39.0",
     "eslint-plugin-import": "^2.27.5",
@@ -28,6 +29,7 @@
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
+    "vitest": "^0.31.0",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3",
